--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   cool_alert: ^1.1.0
   flutter_switch: ^0.3.2
   dotted_border: ^2.0.0+1
+  jiffy: ^4.1.0
+  timeago: ^3.1.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
